sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:15: error: ')' expected but '}' found.
  }
  ^AlgInsertionSort:17: error: Unmatched closing brace '}' ignored here
          }
          ^